--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+            <img src="img/Logo Lobão.jpg" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -51,18 +51,14 @@
               </div>
         </section>
 
-        <section id="O Lobão e os Ronaldos" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
+        <section id="O Lobão e os Ronaldos" class="my-5 pt-6 secao-Lobão e os Ronaldos" tabindex="0" aria-label="Seção explicativa sobre o Lobão e os Ronaldos">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
                     <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que foi o Lobão e os Ronaldos?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <p class="p-2">Lobão e os Ronaldos foi uma banda brasileira de rock formada em 1984 e liderada por Lobão. Durou pouco tempo, lançando apenas um álbum: Ronaldo Foi Pra Guerra (1984). Apesar da curta vida, teve grande impacto no rock nacional, com músicas como "Me Chama" e "Corações Psicodélicos". A banda misturava rock com elementos de new wave e pop, e marcou o início da carreira solo de Lobão.</p>
                 </div>
             </div>
         </section>
@@ -109,7 +105,7 @@
                                 placeholder="Digite seu email">
                         </div>
                         <div class="form-group mb-3">
-                            <label for="mensagem">Mensagem</label>
+                            <Lucas for="mensagem">Mensagem</Lucas>
                             <textarea id="mensagem" name="mensagem" class="form-control rounded-4 mt-2" rows="4"
                                 placeholder="Escreva sua mensagem"></textarea>
                         </div>
