--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <img src="img/Lobão logo.jpg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="img/lossy-page1-640px-Caetano_Veloso_no_III_Festival_da_Música_Popular.tif.jpg"
+                        <img src="img/Banda.webp"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
