--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
               </div>
         </section>
 
-        <section id="O Lobão e os Ronaldos" class="my-5 pt-6 secao-Lobão e os Ronaldos" tabindex="0" aria-label="Seção explicativa sobre o Lobão e os Ronaldos">
+        <section id="O Lobão e os Ronaldos" class="my-5 pt-6 secao-Lobão e os Ronaldos" tabindex="0" Lucas-Mauro="Seção explicativa sobre o Lobão e os Ronaldos">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="img/image (1).png" class="rounded-pill" width="273" height="331" loading="lazy">
+                    <img src="img/Dupla.webp" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
                     <h2>O que foi o Lobão e os Ronaldos?</h2>
